Fixed layout problem with progressbar

--- a/src/components/Progressbar/Progressbar.scss
+++ b/src/components/Progressbar/Progressbar.scss
@@ -2,7 +2,6 @@
 
 .progress {
     padding: 8px;
-    width: 100%;
 
     position: relative;
     overflow: hidden;
